fix(p6-translation): fixes the alignment of the component with the other fields of the form
Closes #21

--- a/packages/core/src/components/molecules/p6-translation/components/p6-translation-line/p6-translation-line.scss
+++ b/packages/core/src/components/molecules/p6-translation/components/p6-translation-line/p6-translation-line.scss
@@ -22,5 +22,9 @@
 
   .columns {
     @include columns;
+
+    &.is-variable.is-1 {
+      --columnGap: 0.75rem;
+    }
   }
 }
